--- a/ActivationAndBindingDemo/local.properties
+++ b/ActivationAndBindingDemo/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 04 16:20:24 PST 2018
-sdk.dir=/Users/zlinoliver/Documents/Android-SDK/android-sdk-macosx
+#Tue Dec 11 14:00:11 CST 2018
+ndk.dir=C\:\\Users\\ewens\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\ewens\\AppData\\Local\\Android\\Sdk
