--- a/ActivationAndBindingDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/ActivationAndBindingDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Jun 13 15:02:25 CST 2017
+#Sun Feb 07 03:38:22 CST 2021
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https://services.gradle.org/distributions/gradle-6.8-all.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-6.7-20200809220033+0000-all.zip
+zipStoreBase=GRADLE_USER_HOME
